apps/base/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: 6767
      protocol: TCP
